@@ -575,6 +575,21 @@ name|commit
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|numDocs
+specifier|public
+name|int
+name|numDocs
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+return|return
+name|w
+operator|.
+name|numDocs
+argument_list|()
+return|;
+block|}
 DECL|method|maxDoc
 specifier|public
 name|int
@@ -587,6 +602,20 @@ operator|.
 name|maxDoc
 argument_list|()
 return|;
+block|}
+DECL|method|deleteAll
+specifier|public
+name|void
+name|deleteAll
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|w
+operator|.
+name|deleteAll
+argument_list|()
+expr_stmt|;
 block|}
 DECL|method|getReader
 specifier|public
