@@ -1038,7 +1038,7 @@ operator|.
 name|commit
 argument_list|()
 expr_stmt|;
-name|assertTrue
+name|assertFalse
 argument_list|(
 name|r1
 operator|.
@@ -4540,15 +4540,15 @@ block|{
 for|for
 control|(
 name|int
-name|i
+name|docUpto
 init|=
 literal|0
 init|;
-name|i
+name|docUpto
 operator|<
 literal|10
 condition|;
-name|i
+name|docUpto
 operator|++
 control|)
 block|{
@@ -4562,7 +4562,7 @@ literal|10
 operator|*
 name|count
 operator|+
-name|i
+name|docUpto
 argument_list|,
 literal|"test"
 argument_list|,
@@ -4585,15 +4585,15 @@ decl_stmt|;
 for|for
 control|(
 name|int
-name|i
+name|delUpto
 init|=
 literal|0
 init|;
-name|i
+name|delUpto
 operator|<
 literal|5
 condition|;
-name|i
+name|delUpto
 operator|++
 control|)
 block|{
